--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.8.1",
+    "tsparticles-engine": "^2.12.0",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
